# physa-db

./: .gitignore  .mise.toml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  justfile  lychee.toml  release-plz.toml
.agents/: README.md
.agents/skills/: abandon  file-issue  next  plan-feature  pre-commit-check  promote-adr  research-competitor  run-bench  run-stress  write-adr
.claude/: settings.json
.claude/skills/: README.md
.claude/skills/abandon/: SKILL.md
.claude/skills/file-issue/: SKILL.md
.claude/skills/next/: SKILL.md
.claude/skills/onboard/: SKILL.md
.claude/skills/plan-feature/: SKILL.md
.claude/skills/pre-commit-check/: SKILL.md
.claude/skills/promote-adr/: SKILL.md
.claude/skills/research-competitor/: SKILL.md
.claude/skills/review-pr/: SKILL.md
.claude/skills/run-bench/: SKILL.md
.claude/skills/run-stress/: SKILL.md
.claude/skills/wait-ci/: SKILL.md  predicates.md
.claude/skills/write-adr/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml
.github/ISSUE_TEMPLATE/: agent-task.yml  bug.yml  config.yml  feature.yml  performance.yml  research.yml
.github/agent-prompts/: README.md
.github/scripts/: bench-collect-iai.sh  bench-compare-iai.sh  bench-package-results.sh  check-conventional-commits.sh  check-release-plz-config.py  release-plz-dry-run.sh
.github/workflows/: bench-nightly.yml  bench-regression.yml  ci.yml  conventional-commits.yml  issue-milestone-gate.yml  reap-stale-claims.yml  release-plz.yml  snapshot-dashboard.yml  sync-labels.yml
crates/physa-cli/: CHANGELOG.md  Cargo.toml
crates/physa-cli/src/: main.rs
crates/physa-client/: CHANGELOG.md  Cargo.toml
crates/physa-client/src/: lib.rs
crates/physa-cluster/: CHANGELOG.md  Cargo.toml
crates/physa-cluster/src/: lib.rs
crates/physa-core/: CHANGELOG.md  Cargo.toml
crates/physa-core/benches/: iai.rs  smoke.rs
crates/physa-core/src/: lib.rs
crates/physa-query/: CHANGELOG.md  Cargo.toml
crates/physa-query/src/: lib.rs
crates/physa-server/: CHANGELOG.md  Cargo.toml
crates/physa-server/src/: lib.rs
dashboard/: index.html
dashboard/src/: app.js  styles.css
docs/: dev-setup.md  seed-issues.md
docs/architecture/: README.md
docs/architecture/adr/: 0001-project-tracking-store.md  0002-gql-and-cypher.md  0003-storage-engine-first-principles.md  0004-concurrency-control.md  0005-sharding-abstraction.md  0006-research-privacy.md  0007-agent-surfaces-and-evidence-trace.md  0008-vector-graph-hybrid-index-and-ann-class.md  0009-observability-primitives.md  0010-multi-tenancy-isolation.md
docs/benchmarks/: README.md
docs/requirements/: README.md  ai-agent-workloads.md  feature-matrix-aggregate.md  feature-matrix.md  non-goals.md  performance-targets.md  positioning.md
tests/stress/: README.md
xtask/: Cargo.toml
xtask/src/: lib.rs  main.rs
xtask/src/dashboard/: fetch.rs  gh.rs  mod.rs  snapshot.rs  state.rs
xtask/tests/: snapshot.rs
xtask/tests/fixtures/: expected_state.json  issues_p1.json  issues_p2.json  milestones.json  projects_p1.json  pulls_p1.json
