[package]
name = "xtask"
version = "0.0.0"
edition = "2024"
publish = false
description = "Workspace dev-task runner: dashboard snapshots, seed-issue generation, research prompts."

[lints]
workspace = true

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
