[package]
name = "physa-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Native Rust client for physa-db."

[lints]
workspace = true

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
