[package]
name = "physa-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core storage engine and graph data structures for physa-db."

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
