[package]
name = "physa-query"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "GQL/Cypher parser, logical & physical planners, executor for physa-db."

[lints]
workspace = true

[dependencies]
physa-core = { path = "../physa-core" }
thiserror = { workspace = true }
tracing = { workspace = true }
