[package]
name = "physa-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Network layer (Bolt v5 wire protocol) and daemon for physa-db."

[lints]
workspace = true

[dependencies]
physa-core = { path = "../physa-core" }
physa-query = { path = "../physa-query" }
physa-cluster = { path = "../physa-cluster" }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
